ADD checkbox e feito o track pelo index

--- a/src/app/components/todo-item/todo-item.component.html
+++ b/src/app/components/todo-item/todo-item.component.html
@@ -1,5 +1,5 @@
 <div class="todo-item">
-    <div class="check-box"></div>
+    <div class="check-box"><app-checkbox [idNumber]="idNumber" /></div>
     <div class="task-name"> {{nameTask}} <span>{{emojiTask}}</span></div>
     <div class="time-task"> {{timeTask}} </div>
     <div class="edit-button"> &#65049; </div>
