Corrigido problema de click no checkbox

--- a/src/app/components/todo-list/todo-list.component.html
+++ b/src/app/components/todo-list/todo-list.component.html
@@ -4,5 +4,5 @@
     [dateTask]="item.dateTask" 
     [timeTask]="item.timeTask"
     [emojiTask]="item.emojiTask" 
-    [idNumber]="i" />
+    [idNumber]="item.id" />
 </div>
