--- a/src/app/components/checkbox/checkbox.component.css
+++ b/src/app/components/checkbox/checkbox.component.css
@@ -1,3 +1,8 @@
+.checkbox-wrapper-23 {
+  position: relative;
+  display: inline-block;
+}
+
 .checkbox-wrapper-23 *,
     .checkbox-wrapper-23 *:after,
     .checkbox-wrapper-23 *:before {
@@ -7,6 +12,13 @@
     .checkbox-wrapper-23 input {
       position: absolute;
       opacity: 0;
+      width: var(--size);
+      height: var(--size);
+      top: 0;
+      left: 0;
+      margin: 0;
+      cursor: pointer;
+      z-index: 2;
     }
       
     .checkbox-wrapper-23 input:checked + label svg path {
