--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
     <app-side-bar></app-side-bar>
   </div>
   <div class="right-container">
+    <button (click)="toggleDarkMode()">Toggle Dark Mode</button>
     <app-header></app-header>
     <app-todo-list [todoList]="todoList"></app-todo-list>
   </div>
