Deletado o modal antigo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,6 @@
     <button (click)="toggleDarkMode()">Toggle Dark Mode</button>
     <app-header></app-header>
     <app-todo-list [todoList]="todoList"></app-todo-list>
-  </div>
-  <app-modal-new-task></app-modal-new-task>
+  </div>  
+  <app-dialog-form></app-dialog-form>
 </main>
