--- a/src/app/components/button/button.component.css
+++ b/src/app/components/button/button.component.css
@@ -1,7 +1,7 @@
 .btn{
     cursor: pointer;
     background-color: #1550F7;   
-    width: 220px;
+    width: 100%;
     height: 38px;
     border: none;
     border-radius: 5px;    
