--- a/src/app/components/checkbox/checkbox.component.html
+++ b/src/app/components/checkbox/checkbox.component.html
@@ -1,8 +1,8 @@
 <div class="checkbox-wrapper-23">
-    <input type="checkbox" id="{{idNumber}}"/>
-    <label for="{{idNumber}}" style="--size: 25px">
-      <svg viewBox="0,0,50,50">
-        <path d="M5 30 L 20 45 L 45 5"></path>
-      </svg>
-    </label>
+  <input type="checkbox" [checked]="checked" (change)="toggleChecked()" id="{{idNumber}}" />
+  <label for="{{idNumber}}" style="--size: 25px">
+    <svg viewBox="0,0,50,50">
+      <path d="M5 30 L 20 45 L 45 5"></path>
+    </svg>
+  </label>
 </div>
