--- a/src/app/components/dialog-form/dialog-form.component.css
+++ b/src/app/components/dialog-form/dialog-form.component.css
@@ -17,7 +17,7 @@
   font-size: 35px;
 }
 
-.modal-container {
+.modal-content {
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -27,3 +27,5 @@
   display: flex;
   gap: 10px;
 }
+
+
