--- a/src/app/components/todo-list/todo-list.component.html
+++ b/src/app/components/todo-list/todo-list.component.html
@@ -1,8 +1,3 @@
 <div class="list-container" *ngFor="let item of todoList; let i = index">
-    <app-todo-item 
-    [nameTask]="item.name" 
-    [dateTask]="item.dateTask" 
-    [timeTask]="item.timeTask"
-    [emojiTask]="item.emojiTask" 
-    [idNumber]="item.id" />
+    <app-todo-item [todoItem]="item" (onCheckedChange)="onCheckedChange.emit(item.id)"></app-todo-item>
 </div>
