--- a/src/app/components/todo-item/todo-item.component.html
+++ b/src/app/components/todo-item/todo-item.component.html
@@ -1,11 +1,14 @@
 <div class="todo-item">
     <div class="check-box">
-        <app-checkbox (checkedChange)="onCheckedChange.emit(todoItem?.id)" [checked]="todoItem?.status === 'completed'" [idNumber]="todoItem?.id">
+        <app-checkbox (checkedChange)="onCheckedChange.emit(todoItem.id)" [checked]="todoItem.status === 'completed'"
+            [idNumber]="todoItem.id">
         </app-checkbox>
     </div>
-    <div class="task-name" [ngClass]="{'task-name-terminated': todoItem?.status === 'completed'}"> {{ todoItem?.name }}
-        <span>{{ todoItem?.emojiTask }}</span></div>
-    <div class="time-task"> {{ todoItem?.startTask | clock }} - {{ todoItem?.endTask | clock }} </div>
-    <div class="edit-button"> &#65049;
+    <div class="task-name" [ngClass]="{'task-name-terminated': todoItem.status === 'completed'}"> {{ todoItem.name }}
+    </div>
+    <div class="time-task"> {{ todoItem.startTask | clock }} - {{ todoItem.endTask | clock }} </div>
+    <div class="time-task"> {{ todoItem.dateTask }} </div>
+    <div (click)="onEdit.emit(todoItem)" class="edit-button"> &#65049;  
+        <app-dialog [item]="todoItem"></app-dialog>
     </div>
 </div>
