--- a/src/app/components/todo-item/todo-item.component.css
+++ b/src/app/components/todo-item/todo-item.component.css
@@ -1,4 +1,7 @@
 .todo-item {
+  display: flex;
+  gap: 5px;
+  cursor: pointer;
   background-color: #ffffff;
   width: 100%;
   height: 45px;
@@ -37,8 +40,25 @@
   padding: 4px 8px;
   border-radius: 6px;
 }
+.edit-button:hover {
+  color: #249b2a;
+  font-weight: 600;
+}
+.delete-button {
+  margin-left: 10px;
+  font-weight: 400;
+  flex-grow: 0;
+  background-color: #f3f3f3;
+  padding: 4px 8px;
+  border-radius: 6px;
+  cursor: pointer;
+}
+.delete-button:hover {
+  color: #ff0000;
+  font-weight: 600;
+}
 
 .todo-item:hover {
-  transform: scalex(1.01);
+  transform: scalex(1.005);
   background-color: rgb(17, 154, 233);
 }
