Finalizacao do projeto

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="header-container">
     <div class="welcome-header">
-        <h1 class="title-header">Bem vindo, Renan! 👻</h1>
+        <h1 class="title-header">Minhas Tarefas! 📝</h1>
         <div class="date-header">{{dataAtual | date:'MMM d, y, h:mm:ss a'}}</div>
     </div>
     
