--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   width: 100vw;
   height: 100vh;
-  background-color: #f5f5f5;
+  background-color: #f6f6f6;
   display: flex;
   justify-content: space-between;
   padding: 8px;
@@ -15,6 +15,7 @@
   border-radius: 8px;
   overflow: hidden;
   background-color: #ffffff;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
    
 }
 .right-container {
