--- a/src/app/components/side-bar/side-bar.component.css
+++ b/src/app/components/side-bar/side-bar.component.css
@@ -52,11 +52,12 @@
   gap: 10px;
   width: 100%;
   height: 40px;
-  background-color: #f3f3f3;
+  background-color: #204ee6;
   margin-bottom: 10px;
   border-radius: 8px;
   padding: 0 10px;
   font-weight: 500;
+  color: #ffffff;
 }
 .menu-item-counter-highlighted {
   background-color: #ffffff;
