--- a/src/app/components/todo-list/todo-list.component.html
+++ b/src/app/components/todo-list/todo-list.component.html
@@ -1,3 +1,3 @@
-<div class="list-container" *ngFor="let item of todoList; let i = index">
+<div class="list-container" *ngFor="let item of todoList.slice().reverse(); let i = index">
     <app-todo-item [todoItem]="item" (onCheckedChange)="onCheckedChange.emit(item.id)" (onEdit)="onEdit.emit($event)" (onDelete)="onDelete.emit(item.id)"></app-todo-item>
 </div>
