--- a/src/app/components/side-bar/side-bar.component.html
+++ b/src/app/components/side-bar/side-bar.component.html
@@ -2,30 +2,23 @@
     <h2 class="menu-title">Categoria</h2>
     <div class="menu-list">
 
-        <div 
-  class="menu-item" 
-  [ngClass]="{'menu-item-highlighted': selectedFilter === ''}" 
-  (click)="setFilter('')">
+        <div class="menu-item" [ngClass]="{'menu-item-highlighted': selectedFilter === ''}" (click)="setFilter('')">
             <span>🏠</span>
-            <span style="flex-grow: 1;">Todos</span>
-            <span class="menu-item-counter">{{counter[0]+counter[1]}}</span>
+            <span style="flex-grow: 1;">Todos<span class="menu-item-counter">{{counter[0]+counter[1]}}</span></span>
+
         </div>
-        <div 
-  class="menu-item" 
-  [ngClass]="{'menu-item-highlighted': selectedFilter === 'pending'}" 
-  (click)="setFilter('pending')">
+        <div class="menu-item" [ngClass]="{'menu-item-highlighted': selectedFilter === 'pending'}"
+            (click)="setFilter('pending')">
             <span>⌛</span>
-            <span style="flex-grow: 1;">Pendentes</span>
-            <span class="menu-item-counter">{{counter[0]}}</span>
+            <span style="flex-grow: 1;">Pendentes<span class="menu-item-counter">{{counter[0]}}</span></span>
+
         </div>
-        <div 
-  class="menu-item" 
-  [ngClass]="{'menu-item-highlighted': selectedFilter === 'completed'}" 
-  (click)="setFilter('completed')">
+        <div class="menu-item" [ngClass]="{'menu-item-highlighted': selectedFilter === 'completed'}"
+            (click)="setFilter('completed')">
             <span>✅</span>
-            <span style="flex-grow: 1;">Finalizados</span>
-            <span class="menu-item-counter">{{counter[1]}}</span>
-        </div>  
+            <span style="flex-grow: 1;">Finalizados <span class="menu-item-counter">{{counter[1]}}</span></span>
+
+        </div>
 
     </div>
 
