--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -15,3 +15,15 @@
   font-size: 22px;
 
 }
+
+@media (max-width: 800px) {
+.title-header{
+  font-size: 24px;
+}
+.date-header{
+  font-size: 16px;
+}
+img {
+  width: 140px;
+}
+}
