--- a/src/app/components/side-bar/side-bar.component.css
+++ b/src/app/components/side-bar/side-bar.component.css
@@ -121,23 +121,27 @@
     background-color: rgb(233, 233, 233);
     display: flex;
     flex-direction: column;
+    padding: 0;
     height: 60px;    
   }
   .menu-item:hover {    
     background-color: #f3f3f3;
     display: flex;
     flex-direction: column;
-    height: 60px;    
+    height: 60px;
+    padding: 0;    
   }
   .menu-item-highlighted {    
     background-color: #204ee6;
     display: flex;
     flex-direction: column;
-    height: 60px;    
+    height: 60px;
+    padding: 0;    
   }
   .menu-item-highlighted:hover {    
     background-color: #204ee6;
     height: 60px;
+    padding: 0;
       
   }
   .menu-list {
