--- a/src/app/components/todo-item/todo-item.component.html
+++ b/src/app/components/todo-item/todo-item.component.html
@@ -6,12 +6,13 @@
     </div>
     <div class="task-name" [ngClass]="{'task-name-terminated': todoItem.status === 'completed'}"> {{ todoItem.name }}
     </div>
-    <div class="time-task"> {{ todoItem.startTask | clock }} - {{ todoItem.endTask | clock }} </div>
+    <div class="time-task"> {{ todoItem.startTask | clock }} <span class="dash">-</span> {{ todoItem.endTask | clock }}
+    </div>
     <div class="time-task"> {{ todoItem.dateTask | dateRange }} </div>
-    <div (click)="onEdit.emit(todoItem)" class="edit-button"> &#x270E;  
+    <div (click)="onEdit.emit(todoItem)" class="edit-button"> &#x270E;
         <app-dialog [item]="todoItem"></app-dialog>
     </div>
-    <div (click)="onDelete.emit(todoItem.id)" class="delete-button"> &#x2715;  
+    <div (click)="onDelete.emit(todoItem.id)" class="delete-button"> &#x2715;
         <app-dialog [item]="todoItem"></app-dialog>
     </div>
 </div>
